[package]
name = "klask"
version = "1.0.0"
authors = ["Michał Gniadek <mgniadek@interia.pl>"]
edition = "2021"
license = "MIT"
description = "Automatically create GUI for clap apps"
repository = "https://github.com/MichalGniadek/klask"
categories = ["gui"]
keywords = ["clap", "gui", "ui", "cli", "egui"]

[dependencies]
cansi = "2.2.0"
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "unicode",
    "deprecated",
    "error-context",
] }
eframe = { version = "0.22", features = ["glow"] }
linkify = "0.9"
rfd = "0.11"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { version = "0.3.28", default-features = false }
uuid = { version = "1.3", features = ["v4", "js"] }
wasm-bindgen-futures = "0.4.37"

#[target.'cfg(not(any(target_os = "windows", target_arch = "wasm32")))'.dependencies]
#native-dialog = "0.6"
#
## Should make dialogs look better
#[target.'cfg(target_os = "windows")'.dependencies]
#native-dialog = { version = "0.6", features = [
#    "windows_dpi_awareness",
#    "windows_visual_styles",
#] }
